COO-format compliance with makefile update

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,11 +8,13 @@ clean:
 	rm -rf reference asx oski *.o *.dSYM *.trace *.pyc
 
 reference: run.c test.o reference.o util.o
-			$(CC) $(LDFLAGS) run.c test.o reference.o util.o -o reference $(LDFLAGS2)
+			@$(CC) $(LDFLAGS) run.c test.o reference.o util.o -o reference $(LDFLAGS2)
+			@echo "\033[0;32m[33%]\033[0m Compiling reference"
 
 asx: run.c test.o asx.o util.o
-			$(CC) $(LDFLAGS) run.c test.o asx.o util.o -o asx $(LDFLAGS2)
-
+			@$(CC) $(LDFLAGS) run.c test.o asx.o util.o -o asx $(LDFLAGS2)
+			@echo "\033[0;32m[66%]\033[0m Compiling asx"
 
 oski: run.c test.o oski.o util.o
-			$(CC) $(LDFLAGS) run.c test.o oski.o util.o -o oski $(LDFLAGS2)
+			@$(CC) $(LDFLAGS) run.c test.o oski.o util.o -o oski $(LDFLAGS2)
+			@echo "\033[0;32m[100%]\033[0m Compiling oski"
